# FantasyFootballMockDraft

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
backend/: __init__.py
backend/app/: __init__.py  draft_engine.py  enrichment.py  main.py  rankings.py  schemas.py
backend/tests/: test_draft_api.py
data/inputs/: FantasyPros_2025_Overall_ADP_Rankings_HPPR.csv  FantasyPros_2025_Overall_ADP_Rankings_PPR.csv  FantasyPros_2025_Overall_ADP_Rankings_STD.csv  FantasyPros_Fantasy_Football_Projections_DST.csv  FantasyPros_Fantasy_Football_Projections_FLX_HPPR.csv  FantasyPros_Fantasy_Football_Projections_FLX_PPR.csv  FantasyPros_Fantasy_Football_Projections_FLX_STD.csv  FantasyPros_Fantasy_Football_Projections_K.csv  FantasyPros_Fantasy_Football_Projections_QB.csv  README.md  nfl_player_ids.csv
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.next.json
frontend/app/: globals.css  layout.tsx  page.tsx
reference/: FantasyPros_2025_Master_Projections_With_ADP.csv  README.md
scripts/: README.md  build_fantasypros_master.py  compare_fantasypros_master.py  pull_recent_nflreadpy.py
